Fixed issue of fallback text overflowing on the past performances page. Past Performances card titles now center on mobile screens.

--- a/src/style/pgs/services/performances/past_performances.less
+++ b/src/style/pgs/services/performances/past_performances.less
@@ -51,9 +51,13 @@ h1#previousPerformancesTitle {
 		width: fit-content;
 		margin:0px;
 	}
+	@media only screen and (max-width: 664px) {
+		& > h2 {
+			margin: auto;
+		}
+	}
 	// "Loading..." text
 	& > h3 {
-		width: 40rem;
 		margin:3rem auto 1rem auto;
 	}
 	// "Error" heading
